# polymarket-sdk

./: Cargo.toml
scripts/: publish.sh
src/: auth.rs  lib.rs  order.rs  prelude.rs  safe.rs  stream.rs
src/auth/: builder.rs
src/client/: clob.rs
src/core/: error.rs
